Fix alignment in "Event Observables" documentation table.

--- a/src/app/shared/events/events.component.scss
+++ b/src/app/shared/events/events.component.scss
@@ -1,3 +1,9 @@
 tui-doc-documentation {
     margin-top: 1rem;
 }
+
+:host::ng-deep {
+    td.t-cell:last-child {
+        text-align: left;
+    }
+}
